新增每日簽到題目相關的資料庫操作與服務邏輯

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DISCORD_BOT_TOKEN=
 # Discord Server Guild Id
 DISCORD_GUILD_ID=
 
+# rules
+RULE_CHECK_IN_MAX_TIMES=2 # 每日最大簽到次數 2 次
+
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
