新增商品購買功能，整合商品查詢與購買邏輯，並優化分頁顯示

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DISCORD_GUILD_ID=
 
 # rules
 RULE_CHECK_IN_MAX_TIMES=2 # 每日最大簽到次數 2 次
+RULE_MERCHANDISE_TRADE_FEE=0.2 # 交易手續費 20%
 
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=
