調整 .env.example

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ DISCORD_GUILD_ID=
 # rules
 RULE_CHECK_IN_MAX_TIMES=2 # 每日最大簽到次數 2 次
 RULE_MERCHANDISE_TRADE_FEE=0.2 # 交易手續費 20%
+RULE_TRANSFER_FEE=15 # 轉帳手續費
 
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=
