新增角色服務，實作身份組檢查功能以防止被懲罰的成員使用特定指令

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ RULE_CHECK_IN_MAX_TIMES=2 # 每日最大簽到次數 2 次
 RULE_MERCHANDISE_TRADE_FEE=0.2 # 交易手續費 20%
 RULE_TRANSFER_FEE=15 # 轉帳手續費
 
+#role
+ROLE_MANAGER=
+ROLE_BANNED=
+
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
