更新 requirements.txt 以新增 pymysql 和 cryptography 依賴；調整資料庫連接以使用環境變數設定主機和端口；更新 Docker Compose 配置以添加健康檢查；修正資料庫更新語句以同時更新 deleted_at 和 updated_at 欄位；移除 README 中的求助段落。

--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,11 @@ RULE_TRANSFER_FEE=15 # 轉帳手續費
 #role
 ROLE_MANAGER=
 ROLE_BANNED=
+RULE_SHOP_LIST_SHOW_DESCRIPTION=True
 
 # MySQL 設定
-MYSQL_ROOT_PASSWORD=
-MYSQL_DATABASE=
-MYSQL_USER=
-MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=root_password
+MYSQL_DATABASE=discord_db
+MYSQL_USER=discord_user
+MYSQL_PASSWORD=discord_pass
+MYSQL_PORT=3306
