.env.example 調整

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
-# Discord Bot Token
+# Discord Bot Token - 請參見 https://discordpy.readthedocs.io/en/stable/discord.html 指引
 DISCORD_BOT_TOKEN=
 
-# rules
-RULE_CHECK_IN_MAX_TIMES=2 # 每日最大簽到次數 2 次
-RULE_MERCHANDISE_TRADE_FEE=0.2 # 交易手續費 20%
-RULE_TRANSFER_FEE=15 # 轉帳手續費
+# 機器人內部規則
 
-#role
-ROLE_MANAGER=
-ROLE_BANNED=
-RULE_SHOP_LIST_SHOW_DESCRIPTION=True
+RULE_CHECK_IN_MAX_TIMES=2 # `/check-in 簽到` 每日最大次數 - 2 代表天最多執行兩次，但如果有透過兌換任務刷新卷，刷掉舊的任務，則可以領去新的新的任務
+RULE_MERCHANDISE_TRADE_FEE=0.2 # `/inventory 兌換商品` 時，對上架者的抽成 - 0.2 代表抽成 20%，如果上架者販售 100 元，則購買人兌換後，上架者只能拿到 80 元
+RULE_TRANSFER_FEE=15 # `/bank 轉帳` 時，轉帳手續費 - 15 代表 15 元，也就是轉出方如果想轉 100 元，必須帳戶至少需要有 115 才能成功轉帳
+RULE_SHOP_LIST_SHOW_DESCRIPTION=True # `/shop 查看商品` 時，是否要呈現「商品概述」，如果不要，請設定成 False
+
+# 機器人權限檢查邏輯 - 取得身份組 ID 方式可參見 https://www.pythondiscord.com/pages/guides/pydis-guides/contributing/obtaining-discord-ids/
+ROLE_MANAGER= # 擁有執行 `/manager` 指令權限的身份組，可以透過逗號給予多個身份組 id，例如 `ROLE_MANAGER=1358106715840843938,1358106751119003738`
+ROLE_BANNED= # 暫時停權身份組，一但給予後，除了 `/personal 個人資料` 與 `/inventory 查看背包` 外，其他所有指令皆無法使用
 
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=root_password
