更新 README 文件以改善專案說明；調整 Docker Compose 指令以正確啟動主程式

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - .env
     volumes:
       - ./src:/bot
-    command: /bin/bash -c "alembic upgrade head && python watcher.py"
+    command: /bin/bash -c "alembic upgrade head && python main.py"
 
 
   db:
