Feature: 不活躍用戶列表指令
- 擴增 UserRepository / UserService
- 提供 `/不活躍用戶 列表` 指令來查看目前需要處理的對象

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,14 @@ RULE_SHOP_LIST_SHOW_DESCRIPTION=True
 ## 邀請連結有效時間 - 預設 168 小時 (七天)
 INVITE_LIFE_TIME_HOUR=168
 
+# inactive user
+## 是否開啟不活躍用戶檢查
+RULE_INACTIVE_CHECK_ENABLE=False
+## 不活躍簽到檢查天數，單位為天：自當下過去 RULE_INACTIVE_CHECKIN_DAYS 天內都未曾 CHECK IN 過的人將會被還原成待審核
+RULE_INACTIVE_CHECKIN_DAYS=30 
+## 當過去連續 RULE_INACTIVE_WARNING_DAYS 天的未曾簽到時，會對該用戶發送一則訊息作為警示，避免毫無預兆的還原成待審核
+RULE_INACTIVE_WARNING_DAYS=23
+
 # MySQL 設定
 MYSQL_ROOT_PASSWORD=root_password
 MYSQL_DATABASE=discord_db
